[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Transition/Turn Transition.gd" type="Script" id=1]
[ext_resource path="res://assets/transition/player phase.png" type="Texture2D" id=2]
[ext_resource path="res://assets/transition/enemy phase.png" type="Texture2D" id=3]
[ext_resource path="res://assets/sound/transition/Next Turn.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Move_Off"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player Turn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.8, 1.2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player Turn:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.9, 1.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player Turn:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.9, 1.3 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 80 ), Vector2( 120, 80 ), Vector2( 360, 80 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Transition:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Move_Off"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy Phase:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.9, 1.3 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 80 ), Vector2( 120, 80 ), Vector2( 360, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Enemy Phase:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.9, 1.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Enemy Phase:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.8, 1.2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Transition:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Turn Transition" type="Node2D"]
z_index = 6
script = ExtResource( 1 )

[node name="Player Turn" type="Sprite2D" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 360, 80 )
scale = Vector2( 1, 1e-05 )
z_index = 2
texture = ExtResource( 2 )

[node name="Enemy Phase" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 120, 80 )
scale = Vector2( 1, 1e-05 )
z_index = 2
texture = ExtResource( 3 )

[node name="Transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Move_Off = SubResource( 1 )

[node name="Animation_E" type="AnimationPlayer" parent="."]
anims/Move_Off = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.75
one_shot = true
[connection signal="animation_finished" from="Animation" to="." method="ally_animation_finished"]
[connection signal="animation_finished" from="Animation_E" to="." method="enemy_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
